<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="5dp"
    tools:context=".NewUser">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:minHeight="70dp"
            android:padding="5dp">

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:ems="10"
                android:hint="First name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:ems="10"
                android:hint="Last name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:ems="10"
                android:hint="Phone number"
                android:inputType="phone"
                android:maxLength="10"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:autofillHints="password"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:autofillHints="password"
                android:ems="10"
                android:hint="Confirm password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <EditText
                android:id="@+id/CCNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="3"
                android:autofillHints="creditCardNumber"
                android:ems="10"
                android:hint="CC Number"
                android:inputType="number"
                android:maxLength="16"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <EditText
                android:id="@+id/CVVCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:autofillHints="creditCardSecurityCode"
                android:ems="10"
                android:hint="CVV"
                android:inputType="number"
                android:maxLength="3"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <EditText
                android:id="@+id/CCExpiryMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:autofillHints="creditCardExpirationMonth"
                android:ems="10"
                android:hint="Month"
                android:inputType="number"
                android:maxLength="2"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <EditText
                android:id="@+id/CCExpiryYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:autofillHints="creditCardExpirationMonth"
                android:ems="10"
                android:hint="Year"
                android:inputType="number"
                android:maxLength="2"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <TextView
                android:id="@+id/CCTypeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_weight="2"
                android:ems="10"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autofillHints="username"
                android:ems="10"
                android:hint="Username"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:padding="5dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="100dp"
                android:layout_height="84dp"
                android:backgroundTint="@color/button"
                android:text="Register"
                android:textSize="20sp"
                android:layout_weight="1"
                android:onClick="onClick"
                tools:ignore="MissingConstraints" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/errorLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                tools:ignore="MissingConstraints" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>