<resources>
    <string name="app_name">Group16 - Quick Cash</string>
    <string name="button">login</string>
    <string name="button2">switch to employee</string>
    <string name="TextView2">password</string>
    <string name="Text">email</string>
    <string name="EMPTY_STRING" />
    <string name="FIREBASE_URL">https://group-16-62934-default-rtdb.firebaseio.com</string>
    <string name="search">search</string>
    <string name="FIELD_EMPTY_ERR">At least one field is empty</string>
    <string name="Return">return</string>
    <string name="FNAME_EMPTY_ERR">Please enter your first name</string>
    <string name="LNAME_EMPTY_ERR">Please enter your last name</string>
    <string name="CCNUM_EMPTY_ERR">Please enter your credit card number</string>
    <string name="EMAIL_EMPTY_ERR">Please enter your email address</string>
    <string name="PHONE_EMPTY_ERR">Please enter your phone number</string>
    <string name="USERNAME_EMPTY_ERR">Please enter a username</string>
    <string name="PSSWD_EMPTY_ERR">Please enter a password</string>
    <string name="CPSSWD_EMPTY_ERR">Please re-enter the password</string>

    <string name="CCNUM_INVALID_ERR">These card details don\'t look quite right</string>

    <string name="EMAIL_ILLEGAL_FORMAT_ERR">Please give a valid email, formatted like user@example.com</string>

    <string name="PHONE_ILLEGAL_FORMAT_ERR">Please enter only the 10-digits of your phone number</string>
    <string name="PHONE_NOT_CANADIAN_ERR">We can only accept Canadian phone numbers at this time</string>

    <string name="USERNAME_ILLEGAL_CHAR_ERR">Usernames may only contain letters A-z, numbers, and dashes</string>
    <string name="USERNAME_ILLEGAL_LENGTH_ERR">Usernames should be 6–30 characters long</string>
    <string name="USERNAME_TAKEN_ERR">This username is not available</string>

    <string name="PSSWD_ILLEGAL_FORMAT_ERR">Your password should be 6 characters or longer</string>
    <string name="CPSSWD_DIFFERENT_ERR">Passwords do not match</string>
    <string name="FIREBASE_DB_URL">https://group-16-62934-default-rtdb.firebaseio.com/</string>

    <string name="ACCOUNT_EXISTS_ERR">You already have an account, please login!</string>
    <string name="REGISTERED_MESSAGE">Registration successful!</string>
    <string name="REGISTRATION_FAILED_ERR">There was an error, please try again!</string>

...
